# pytest_example

./: pyproject.toml
pytest_example/: calculator.py
tests/: test_calculator.py
