[tool.poetry]
name = "pytest_example"
version = "0.1.0"
description = "Examples of pytest usage"
authors = ["Andy Phelps <andrew.m.phelps@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest_check = "^1.0.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
